# Ali

./: .env  .env.production  Dockerfile  README.md  db_setup.js  eslint.config.js  fly.toml  index.html  lilypichu.theme  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  server.js  tailwind.config.js  trend_request_form.db  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
app/: auth.py  database.py  init_db.py  main.py  middleware.py  models.py  permissions.py  schemas.py
app/routers/: academic.py  admin.py  auth.py  library.py  maintenance.py  rules.py
backend/: .env  pyproject.toml  support_tickets.db
backend/app/: database.py  main.py  models.py
frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
public/: index.html
src/: AdminDashboard.js  AdminPanel.tsx  App.js  App.tsx  ControlPanel.js  CountdownTimer.js  CustomerTicketSubmission.js  CustomerTracking.js  CustomerTrackingPage.js  LanguageToggle.js  LoginBox.js  MemberDropdownMenus.js  NotificationSystem.js  RegistrationForm.js  SectionManagement.js  TrendRequestForm.js  env.d.ts  i18n.js  i18n.ts  index.css  index.js  main.tsx
src/components/: AdminLoginDialog.tsx  LanguageSwitcher.tsx  MaintenanceMode.tsx  ProtectedRoute.tsx  SoundEffects.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useLocalStorage.ts  useRealTimeData.ts
src/lib/: api.ts  errors.ts  validations.ts
src/pages/: AcceptedRejectedTrends.tsx  AdminDashboard.tsx  Dashboard.tsx  Login.tsx  TrendRequestForm.tsx
tests/: test_maintenance.py
(+75 files in other folders)
